fix section overflow. Issue: `Datasets` gets scrolled over with table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,8 @@ pre {
 table {
   width: 100%;
   border-collapse: collapse;
+  display: block;
+  overflow-x: auto;
 }
 
 th,
